--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,11 @@
 
 $textColor: blue;
 
+:root {
+    --textColor: yellow;
+    --backgroundColor: black;
+}
+
 html {
     box-sizing: border-box;
 }
@@ -36,6 +41,7 @@ background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     display: flex;
     justify-content: center;
     gap: 16px;
+    background: var(--backgroundColor)
 
 }
 
